--- a/css/ErickCSS.css
+++ b/css/ErickCSS.css
@@ -76,9 +76,6 @@ body .navbar {
 	height: 0;
 	min-height: 0;
 }
-body {
-    background-color: rgb(0,121,191);
-}
 .Header h1, .Header .description {
 	font-family: Georgia,"Times New Roman",Times,Helvetica,Arial,serif;
     color: #123456;
@@ -96,7 +93,7 @@ body {
 	padding-bottom: 0;
 }
 .content-inner {
-	padding: 10px 20px;
+	padding: 0;
 }
 .tabel-wrapper {
 	overflow-x: auto;
@@ -126,4 +123,11 @@ body {
 }
 .post-outer .post-title {
 	color: #337ab7;
+}
+.Profile ul {
+	background-color: :white;
+	padding: 10px;
+}
+.Profile ul li {
+	list-style-type: none;
 }
